# hatsdf_slam

./: .gitmodules  Doxygen.config  Makefile  README.md  build.cfg  copy_to_qemu.tcl  link.cfg  link_test.cfg  package.cfg  package_test.cfg  postSysLink.tcl  skipfile
app_data/: config.json  init.sh  init_sw_emu.sh
dataset_config/: kitti_06.json  lego_loam.json
pcd_files/: bagfile_cloud.pcd  robo_lab.pcd  sim_cloud.pcd
ros/: demo.rviz  frames.gv  mesh_bag.rviz  mesh_live.rviz  ms02demo.rviz  poses_loam_2021-03-30-13-01-17.txt  poses_loam_2021-03-30-13-03-01.txt
ros/src/bridge/: CMakeLists.txt  package.xml
ros/src/bridge/cmake/: helpers.cmake
ros/src/bridge/config/: bridge.rviz
ros/src/bridge/include/bridge/: util.h
ros/src/bridge/include/bridge/from_trenz/: bridge_base.h  imu_bridge.h  transform_bridge.h  tsdf_bridge.h  velodyne_bridge.h
ros/src/bridge/launch/: bag_player.launch  bridge.launch  bridge_recorder.launch  kitti_bridge.launch  loam_player.launch  mit_player.launch  ouster_player.launch  rviz.launch  sim_bridge.launch  sim_bridge_recorder.launch
ros/src/bridge/scripts/: sync_time.sh
ros/src/bridge/src/from_trenz/: CMakeLists.txt  bridge.cpp  imu_bridge.cpp  transform_bridge.cpp  tsdf_bridge.cpp  velodyne_bridge.cpp
ros/src/bridge/src/kitti_to_ros/: CMakeLists.txt  kitti_to_ros.cpp
ros/src/bridge/src/pose_vis/: CMakeLists.txt  pose_vis.cpp
ros/src/bridge/src/to_trenz/: CMakeLists.txt  bridge.cpp
ros/src/evaluation/evaluation/: CMakeLists.txt  package.xml
ros/src/evaluation/evaluation/config/: decay.rviz  loamvsfastsense.rviz
ros/src/evaluation/evaluation/launch/: fastsensevsloam.launch  loamvsfastsense.launch  loamvsfastsense_rviz.launch  rviz.launch  save_poses.launch
ros/src/evaluation/evaluation/msg/: SavePoseStamped.msg
ros/src/evaluation/evaluation/src/: loam_to_pose_node.cpp  pcl2pcl2.cpp  save_poses_node.cpp
ros/src/mesh_reconstructor/: CMakeLists.txt  package.xml
ros/src/mesh_reconstructor/src/: mesh_reconstructor.cpp
scripts/: compile_test_before_push.sh  test_before_push.sh  update_basedesign.sh
scripts/install/: README.md  bridge.sh  libphidgets.sh
src/: application.cpp  application.h  main.cpp
src/callback/: cloud_callback.cpp  cloud_callback.h  map_thread.cpp  map_thread.h
src/comm/: buffered_receiver.h  queue_bridge.h  receiver.h  sender.h  zmq_context_manager.h
src/driver/imu/: imu.cpp  imu.h
src/driver/imu/api/: phidget.cpp  phidget.h
src/driver/lidar/: velodyne.cpp  velodyne.h
src/example/: example.cpp  krnl_vadd.cpp  vadd.cpp
src/hw/: fpga_manager.cpp  fpga_manager.h  opencl.h
src/hw/buffer/: buffer.h
src/hw/kernels/: base_kernel.h  reg_kernel.h  vadd_kernel.h
src/map/: global_map.cpp  global_map.h  local_map.cpp  local_map.h  local_map_hw.h
src/msg/: angular_velocity.h  imu.h  linear_acceleration.h  magnetic_field.h  point_cloud.h  stamped.h  transform.h  tsdf.h  zmq_converter.h
src/preprocessing/: preprocessing.cpp  preprocessing.h
src/registration/: imu_accumulator.cpp  imu_accumulator.h  registration.cpp  registration.h
src/registration/kernel/: krnl_reg.cpp  linear_solver.h  reg_hw.h
src/tsdf/: krnl_tsdf.cpp  krnl_tsdf.h
src/ui/: button.cpp  button.h  led.cpp  led.h  stdin.h
src/util/: concurrent_ring_buffer.h  concurrent_ring_buffer.tcc  constants.h  event_handler_list.h  event_handler_list.tcc  filter.h  hls_functions.h  params.h  point.h  point_hw.h  process_thread.h  runner.h  runtime_evaluator.cpp  runtime_evaluator.h  time.h  tsdf.h  tsdf_hw.h
src/util/config/: config.h  config_manager.h  config_manager.tcc  config_types.h  config_types.tcc
src/util/logging/: logger.h  logger.tcc  sink.cpp  sink.h
src/util/pcd/: pcd_file.cpp  pcd_file.h
test/: buffer_stl.cpp  catch2_config.h  communication.cpp  concurrent_ringbuffer.cpp  config.cpp  eval_median.cpp  hdf5.cpp  hw_buffers.cpp  imu.cpp  imu_accumulator.cpp  kernel.cpp  kernel_tsdf.cpp  main.cpp  map.cpp  preprocessing.cpp  queue_bridge.cpp  time.cpp  tsdf_kernel_vis.cpp
test/kernels/: io_buffer_test_kernel.h  krnl_io_buffer_test.cpp  krnl_local_map_test.cpp  local_map_test_kernel.h  vadd_kernel.h
test/ros_tests_ws/src/: imu_driver.rviz
test/ros_tests_ws/src/imu_lidar_combo/: CMakeLists.txt  package.xml
test/ros_tests_ws/src/imu_lidar_combo/launch/: imu_lidar_combo.launch
test/ros_tests_ws/src/imu_test/: CMakeLists.txt  package.xml  setup.sh
test/ros_tests_ws/src/imu_test/include/ros_test/: concurrent_ring_buffer.h  concurrent_ring_buffer.tcc  point_cloud.h
test/ros_tests_ws/src/imu_test/launch/: imu_single_nodes.launch
test/ros_tests_ws/src/imu_test/src/: imu_test_node.cpp
test/ros_tests_ws/src/velodyne_test/: CMakeLists.txt  package.xml
test/ros_tests_ws/src/velodyne_test/src/: .velodyne_test_node.cpp.swp  velodyne_test_node.cpp
test_data/: config.json  xrt.ini
