<?xml version="1.0"?>
<package format="2">
  <name>evaluation</name>
  <version>0.0.0</version>
  <description>The evaluation package</description>
  <maintainer email="fastsense@todo.todo">fastsense</maintainer>
  <license>TODO</license>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>imu_filter_madgwick</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
